feat(retry-on-error): use async/await instead of generator BREAKING CHANGE: node 7 is required for async/await

--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,9 @@
     "onmessage": true,
     "expect": true
   },
+  "parserOptions": {
+    "ecmaVersion": 2017
+  },
   "rules": {
     "no-unused-expressions": 0,
     "no-unused-vars": [2, { "vars": "all", "args": "after-used" }],
