--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "NODE_ENV=test mocha --harmony --require co-mocha $(find . -name \"*.spec.js\" -not -path \"./node_modules/*\")",
+    "test": "NODE_ENV=test mocha --harmony $(find . -name \"*.spec.js\" -not -path \"./node_modules/*\")",
     "code-style": "eslint $(find . -name \"*.js\" -not -path \"./node_modules/*\")",
     "validate-commit-msg": "validate-commit-msg",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post"
@@ -35,7 +35,6 @@
     "chai": "3.5.0",
     "chai-as-promised": "5.3.0",
     "chai-subset": "1.3.0",
-    "co-mocha": "1.1.2",
     "eslint": "3.1.1",
     "eslint-config-emarsys": "4.0.0",
     "eslint-plugin-no-only-tests": "1.1.0",
